--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -13,8 +13,10 @@
     <div id="app">
         <div class="container">
             <form action="" class="mt-5">
-                <div class="form-group"><label for="email">Email</label><input type="email"
-                        class="form-control form-control-lg"></div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" v-bind:value='email' class="form-control form-control-lg">
+                </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
@@ -25,7 +27,7 @@
         new Vue({
             el: '#app',
             data: {
-                greeting: 'Hello from Vue!!'
+                email: 'mike@example.com'
             }
         })
     </script>
