--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -15,7 +15,7 @@
             <form action="" class="mt-5">
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" v-bind:value='email' class="form-control form-control-lg">
+                    <input type="email" :value='email' class="form-control form-control-lg">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
