two-way databinding with v-model

--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -15,7 +15,7 @@
             <form action="" class="mt-5">
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" :value='email' class="form-control form-control-lg">
+                    <input type="email" v-model='email' class="form-control form-control-lg">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
@@ -24,7 +24,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
-        new Vue({
+        // vm = viewmodel
+        let vm = new Vue({
             el: '#app',
             data: {
                 email: 'mike@example.com'
