--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -17,7 +17,7 @@
                     <label for="email">Email</label>
                     <input type="email" v-model='email' class="form-control form-control-lg">
                 </div>
-                <button type="submit" v-on:click.prevent='process' class="btn btn-primary">Submit</button>
+                <button type="submit" @click.prevent='process' class="btn btn-primary">Submit</button>
             </form>
         </div>
     </div>
