conditional display shorthand

--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -19,7 +19,7 @@
                 </div>
                 <button type="submit" @click.prevent='process' class="btn btn-primary">Submit</button>
             </form>
-            <h2 v-if="submitted" class="mt-5">Thanks for signing up!</h2>
+            <h2 v-else class="mt-5">Thanks for signing up!</h2>
         </div>
     </div>
 
