--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -12,14 +12,14 @@
 <body>
     <div id="app">
         <div class="container">
-            <form v-if="!submitted" class="mt-5">
+            <form v-show="!submitted" class="mt-5">
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" v-model='email' class="form-control form-control-lg">
                 </div>
                 <button type="submit" @click.prevent='process' class="btn btn-primary">Submit</button>
             </form>
-            <h2 v-else class="mt-5">Thanks for signing up!</h2>
+            <h2 v-show='submitted' class="mt-5">Thanks for signing up!</h2>
         </div>
     </div>
 
