--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -7,6 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <style>
+        [v-cloak] {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,7 +24,7 @@
                 </div>
                 <button type="submit" @click.prevent='process' class="btn btn-primary">Submit</button>
             </form>
-            <h2 v-show='submitted' class="mt-5">Thanks for signing up!</h2>
+            <h2 v-show='submitted' v-cloak class="mt-5">Thanks for signing up!</h2>
         </div>
     </div>
 
