--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -25,19 +25,21 @@
                         <th>Name</th>
                         <th>Close Approach Date</th>
                         <th>Miss Distance</th>
+                        <th>Remove</th>
                     </thead>
                     <tbody v-cloak>
-                        <tr v-for='(a, index) of asteroids'>
+                        <tr v-for='(a, index) of asteroids' :key='a.neo_reference_id'>
                             <td>{{index + 1}}</td>
                             <td>{{a.name}}</td>
                             <td>{{getCloseApproachDate(a)}}</td>
                             <td>
                                 <ul v-if='a.close_approach_data.length'>
-                                    <li v-for='(value, key, index) in a.close_approach_data[0].miss_distance'>
+                                    <li v-for='(value, key) in a.close_approach_data[0].miss_distance'>
                                         {{key}}: {{value}}
                                     </li>
                                 </ul>
                             </td>
+                            <td><button @click='remove(index)' class="btn btn-warning">remove</button></td>
                         </tr>
                     </tbody>
                 </table>
@@ -66,7 +68,6 @@
                     axios.get(url)
                         .then(function (res) {
                             vm.asteroids = res.data.near_earth_objects.slice(0, 10);
-                            // console.log(res);
                         });
                 },
                 getCloseApproachDate: function (a) {
@@ -74,6 +75,9 @@
                         return a.close_approach_data[0].close_approach_date;
                     }
                     return 'N/A';
+                },
+                remove: function (index) {
+                    this.asteroids.splice(index, 1);
                 }
             }
         })
