--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -19,6 +19,10 @@
         <div class="container">
             <div class="card mt-5">
                 <h2 class="card-header">Near-Earth Objects</h2>
+                <div v-cloak class="m-3" v-if='numAsteroids'>
+                    <p>showing {{numAsteroids}} items</p>
+                    <p>{{closesetObject}} that has the shortest miss distance</p>
+                </div>
                 <table class="table">
                     <thead class="thead-light">
                         <th>#</th>
@@ -55,6 +59,19 @@
             el: '#app',
             data: {
                 asteroids: []
+            },
+            computed: {
+                numAsteroids: function () {
+                    return this.asteroids.length;
+                },
+                closesetObject: function () {
+                    const neosHavingData = this.asteroids.filter(neo => !!neo.close_approach_data.length);
+                    const simpleNeos = neosHavingData.map(neo => {
+                        return { name: neo.name, miles: neo.close_approach_data[0].miss_distance.miles };
+                    });
+                    const sortedNeos = simpleNeos.sort((a, b) => a.miles - b.miles);
+                    return sortedNeos[0].name;
+                }
             },
             created: function () {
                 this.fetchAsteroids();
