--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -11,6 +11,11 @@
         [v-cloak] {
             display: none;
         }
+
+        .highlight {
+            border: solid 3px red;
+            color: red
+        }
     </style>
 </head>
 
@@ -23,7 +28,7 @@
                     <p>showing {{numAsteroids}} items</p>
                     <p>{{closesetObject}} that has the shortest miss distance</p>
                 </div>
-                <table class="table table-striped">
+                <table class="table table-striped" :class="[{'table-dark': false, 'table-bordered': true}]">
                     <thead class="thead-light">
                         <th>#</th>
                         <th>Name</th>
@@ -33,7 +38,7 @@
                     </thead>
                     <tbody v-cloak>
                         <tr v-for='(a, index) of asteroids' :key='a.neo_reference_id'
-                            :style="[getRowStyle(a), {color:'blue'}]" style="color: green">
+                            :class="{highlight: isMissingData(a), 'shadow-sm': true}">
                             <td>{{index + 1}}</td>
                             <td>{{a.name}}</td>
                             <td>{{getCloseApproachDate(a)}}</td>
@@ -99,11 +104,12 @@
                 },
                 getRowStyle: function (a) {
                     if (!a.close_approach_data.length)
-                        return {
-                            border: 'solid 3px red',
-                            color: 'red'
-                        }
+                        return
+                },
+                isMissingData: function (a) {
+                    return !a.close_approach_data.length;
                 }
+
             }
         })
     </script>
