--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -27,6 +27,17 @@
         .shooting-star-leave-active {
             transition: all 0.5s ease;
         }
+
+        .neo-list-leave-to,
+        .neo-list-enter {
+            opacity: 0;
+            transform: translateY(30px);
+        }
+
+        .neo-list-enter-active,
+        .neo-list-leave-active {
+            transition: all 1s linear;
+        }
     </style>
 </head>
 
@@ -50,7 +61,7 @@
                         <th>Miss Distance</th>
                         <th>Remove</th>
                     </thead>
-                    <tbody v-cloak>
+                    <tbody is="transition-group" v-cloak tag="tbody" name="neo-list">
                         <tr v-for='(a, index) of asteroids' :key='a.neo_reference_id'
                             :class="{highlight: isMissingData(a), 'shadow-sm': true}">
                             <td>{{index + 1}}</td>
