--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -38,6 +38,24 @@
         .neo-list-leave-active {
             transition: all 1s linear;
         }
+
+        .spin-enter-active {
+            animation: spin-steps 2s;
+        }
+
+        @keyframes spin-steps {
+            0% {
+                transform: scale(1) rotate(0);
+            }
+
+            50% {
+                transform: scale(10) rotate(360deg);
+            }
+
+            100% {
+                transform: scale(1) rotate(1080deg);
+            }
+        }
     </style>
 </head>
 
@@ -45,7 +63,11 @@
     <div id="app">
         <div class="container">
             <div class="card mt-5">
-                <h2 class="card-header">Near-Earth Objects</h2>
+                <h2 class="card-header">Near-Earth
+                    <transition name="spin" appear>
+                        <span style="display: inline-block">Objects</span>
+                    </transition>
+                </h2>
                 <transition name="shooting-star">
                     <div v-cloak class="m-3" v-if='numAsteroids && showSummary'>
                         <p>showing {{numAsteroids}} items</p>
