--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -11,153 +11,39 @@
         [v-cloak] {
             display: none;
         }
-
-        .highlight {
-            border: solid 3px red;
-            color: red
-        }
-
-        .shooting-star-leave-to,
-        .shooting-star-enter {
-            transform: translateX(1500px) rotate(30deg);
-            opacity: 0;
-        }
-
-        .shooting-star-enter-active,
-        .shooting-star-leave-active {
-            transition: all 0.5s ease;
-        }
-
-        .neo-list-leave-to,
-        .neo-list-enter {
-            opacity: 0;
-            transform: translateY(30px);
-        }
-
-        .neo-list-enter-active,
-        .neo-list-leave-active {
-            transition: all 1s linear;
-        }
-
-        .spin-enter-active {
-            animation: spin-steps 2s;
-        }
-
-        @keyframes spin-steps {
-            0% {
-                transform: scale(1) rotate(0);
-            }
-
-            50% {
-                transform: scale(10) rotate(360deg);
-            }
-
-            100% {
-                transform: scale(1) rotate(1080deg);
-            }
-        }
     </style>
 </head>
 
 <body>
     <div id="app">
         <div class="container">
-            <div class="card mt-5">
-                <h2 class="card-header">Near-Earth
-                    <transition name="spin" appear>
-                        <span style="display: inline-block">Objects</span>
-                    </transition>
-                </h2>
-                <transition name="shooting-star">
-                    <div v-cloak class="m-3" v-if='numAsteroids && showSummary'>
-                        <p>showing {{numAsteroids}} items</p>
-                        <p>{{closesetObject}} that has the shortest miss distance</p>
-                    </div>
-                </transition>
-                <div class="m-3"><a href="#" @click="showSummary = !showSummary">Show/hide summary</a></div>
-                <table class="table table-striped" :class="[{'table-dark': false, 'table-bordered': true}]">
-                    <thead class="thead-light">
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>Close Approach Date</th>
-                        <th>Miss Distance</th>
-                        <th>Remove</th>
-                    </thead>
-                    <tbody is="transition-group" v-cloak tag="tbody" name="neo-list">
-                        <tr v-for='(a, index) of asteroids' :key='a.neo_reference_id'
-                            :class="{highlight: isMissingData(a), 'shadow-sm': true}">
-                            <td>{{index + 1}}</td>
-                            <td>{{a.name}}</td>
-                            <td>{{getCloseApproachDate(a)}}</td>
-                            <td>
-                                <ul v-if='a.close_approach_data.length'>
-                                    <li v-for='(value, key) in a.close_approach_data[0].miss_distance'>
-                                        {{key}}: {{value}}
-                                    </li>
-                                </ul>
-                            </td>
-                            <td><button @click='remove(index)' class="btn btn-warning">remove</button></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+            <another-component></another-component>
+            <my-component v-for="i in 1000"></my-component>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
+        const anotherComponent = {
+            data: function () {
+                return {
+                    msg: 'Hello from another component!'
+                }
+            },
+            template: '<h1>{{msg}}</h1>'
+        }
+
+        // W3C Rules: use a hyphen in a custom tag
+        Vue.component('my-component', {
+            template: '<strong>A static element...</strong>'
+        })
+
         // vm = viewmodel
-        let vm = new Vue({
+        const vm = new Vue({
             el: '#app',
-            data: {
-                asteroids: [],
-                showSummary: true
-            },
-            computed: {
-                numAsteroids: function () {
-                    return this.asteroids.length;
-                },
-                closesetObject: function () {
-                    const neosHavingData = this.asteroids.filter(neo => !!neo.close_approach_data.length);
-                    const simpleNeos = neosHavingData.map(neo => {
-                        return { name: neo.name, miles: neo.close_approach_data[0].miss_distance.miles };
-                    });
-                    const sortedNeos = simpleNeos.sort((a, b) => a.miles - b.miles);
-                    return sortedNeos[0].name;
-                }
-            },
-            created: function () {
-                this.fetchAsteroids();
-            },
-            methods: {
-                fetchAsteroids: function (event) {
-                    const apiKey = 'RHbXhHg7gThUJPxG1SfUxlb0k1BYQz2in45a9RGp';
-                    const baseUrl = 'https://api.nasa.gov/neo/rest/v1/neo/browse?api_key=';
-                    const url = `${baseUrl}${apiKey}`;
-
-                    axios.get(url)
-                        .then(function (res) {
-                            vm.asteroids = res.data.near_earth_objects.slice(0, 10);
-                        });
-                },
-                getCloseApproachDate: function (a) {
-                    if (a.close_approach_data.length) {
-                        return a.close_approach_data[0].close_approach_date;
-                    }
-                    return 'N/A';
-                },
-                remove: function (index) {
-                    this.asteroids.splice(index, 1);
-                },
-                getRowStyle: function (a) {
-                    if (!a.close_approach_data.length)
-                        return
-                },
-                isMissingData: function (a) {
-                    return !a.close_approach_data.length;
-                }
-
+            components: {
+                'another-component': anotherComponent
             }
         })
     </script>
