components and slots

--- a/learn_vue/hello.html
+++ b/learn_vue/hello.html
@@ -17,8 +17,14 @@
 <body>
     <div id="app">
         <div class="container">
-            <a-pod date="2018-08-07"></a-pod>
-            <a-pod></a-pod>
+            <a-pod>
+                <h3 slot="title">#1</h3>
+                <p slot="caption">Here's today's Astronomy pic</p>
+            </a-pod>
+            <a-pod date="2018-08-07">
+                <h3 slot="title">#2</h3>
+                <p slot="caption" slot-scope="pic">Here's the pic from {{pic.date}}</p>
+            </a-pod>
         </div>
     </div>
 
@@ -28,8 +34,9 @@
         // W3C Rules: use a hyphen in a custom tag
         Vue.component('a-pod', {
             template: `<div> \
-                        <img :src="imgSrc" :title="imgTitle"> \
-                        <p>{{ date || "today"}}</p> \
+                        <slot name="title"><h3>Untitled</h3></slot>
+                        <img width="300" height="200" :src="imgSrc" :title="imgTitle"> \
+                        <slot name="caption" :date="date"><p>unknown date</p></slot> \
                       </div>`,
             props: ['date'],
             data: function () {
