--- a/learn_vue/grid_component/grid_component.html
+++ b/learn_vue/grid_component/grid_component.html
@@ -1,65 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+<link rel="stylesheet" href="style.css">
 
-<body>
+<div id="app">
+    <div class="container">
+        <asteroid-grid :asteroids="asteroids" header="Near-Earth Objects"></asteroid-grid>        
+    </div> 
+</div>
 
-    <div id="app">
-        <div class="container">
-            <asteroid-grid></asteroid-grid>
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="AsteroidGrid.js"></script>
-    <script>
-        const vm = new Vue({
-            el: '#app',
-            data: {
-                asteroids: []
-            },
-            created: function () {
-                this.fetchAsteroids();
-            },
-            methods: {
-                fetchAsteroids: function (event) {
-                    const apiKey = 'RHbXhHg7gThUJPxG1SfUxlb0k1BYQz2in45a9RGp';
-                    const baseUrl = 'https://api.nasa.gov/neo/rest/v1/neo/browse?api_key=';
-                    const url = `${baseUrl}${apiKey}`;
-                    axios.get(url)
-                        .then(function (res) {
-                            vm.asteroids = res.data.near_earth_objects.slice(0, 10);
-                        });
-                },
-                getCloseApproachDate: function (a) {
-                    if (a.close_approach_data.length) {
-                        return a.close_approach_data[0].close_approach_date;
-                    }
-                    return 'N/A';
-                },
-                remove: function (index) {
-                    this.asteroids.splice(index, 1);
-                },
-                getRowStyle: function (a) {
-                    if (!a.close_approach_data.length)
-                        return
-                },
-                isMissingData: function (a) {
-                    return !a.close_approach_data.length;
-                }
-
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="AsteroidGrid.js"></script>
+<script>    
+    var vm = new Vue({
+        el: '#app',
+        data: {
+            asteroids: []
+        },            
+        created: function () {
+            this.fetchAsteroids();
+        },
+        methods: {
+            fetchAsteroids: function () {
+                var apiKey = 'lkgI9to0hRizfzk4xTAxtNTTFkkA4Mtq7y1yW5me';
+                var url = 'https://api.nasa.gov/neo/rest/v1/neo/browse?api_key=' + apiKey;
+                axios.get(url)
+                    .then(function (res) {                                       
+                        vm.asteroids = res.data.near_earth_objects.slice(0, 10);
+                    });
             }
-        })
-    </script>
-</body>
-
-</html>
+        }
+    });    
+</script>
