--- a/Vue - intro/index.html
+++ b/Vue - intro/index.html
@@ -4,11 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vue-intro</title>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="favicon-32x32.png" type="image/png" sizes="16x16">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+        integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="bg-dark">
+    <div id="app" class="container p-5">
+        <div class="row">
+            <div class="col-4">
+                <div class="row">
+                    <select v-cloak class="custom-select bg-light" name="" id="roleSelector" v-model="selected">
+                        <option v-for="role of roles" :value="role.title ? role : ''" :disabled="!role.title">
+                            {{role.title}}
+                        </option>
+                    </select>
+                </div>
+            </div>
+            <div class="col">
+                <transition name="prompter">
+                    <div class="card bg-secondary text-light rounded" v-if="selected" v-cloak>
+                        <div class="card-header display-4 bg-info" :title="generateTitle(selected)">{{selected.title}}</div>
+                        <div class="card-body">
+                            <div>Cues</div>
+                            <ul>
+                                <li v-for="cue of selected.cues">{{cue}}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </transition>
+            </div>
+        </div>
+    </div>
 
+
+
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
